# mcp-mml-server

./: README.md  melody.mid  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pytest.yml  ruff.yml
docs/: design.md
src/: main.py  mcp_server.py  midi_player.py  mml_processor.py  mml_tools.py
tests/: test_mcp_server.py  test_mml_processor.py  test_mml_tools.py
